fixing icon alignement and avoiding closing drawer when transaction is failing

--- a/wallet-webapps-common/src/main/webapp/css/main.less
+++ b/wallet-webapps-common/src/main/webapp/css/main.less
@@ -1096,3 +1096,9 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
     }
   }
 }
+
+#WalletNotificationAlert {
+  .v-icon {
+    align-self: center !important;
+  }
+}
